Quiet Clojure test logging